tests/NormalTests/paczka1/small_fuzzy/72254531.err
Error in line 2: VIzH0BW A465 78,6
Error in line 7: ov7sT A465 3,0
